# stock-data-monitor

./: Cargo.toml  README.md  diesel.toml
migrations/2025-07-12-233856_create_stock_data/: up.sql
src/: main.rs  schema.rs
src/aws_ses/: send_email.rs
src/data_polling/: alert_cluster.rs  configs.rs  constants.rs  manage_offset.rs  mod.rs  polling_loop.rs  setup_stock_data.rs
src/database/: establish_connection.rs  mod.rs  models.rs
src/polygon_api/: fetch_data.rs  mod.rs  stock.rs  stock_data_response.rs
