[package]
name = "stock_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.6.0"
aws-sdk-sesv2 = "1.70.0"
dotenv = "0.15.0"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.1"